k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jaegyu.dev
      secretName: synapse-tls
  rules:
    - host: jaegyu.dev
      http:
        paths:
          - path: /.well-known
            pathType: Prefix
            backend:
              service:
                name: synapse
                port:
                  number: 80
          - path: /_matrix
            pathType: Prefix
            backend:
              service:
                name: synapse
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synapse
                port:
                  number: 80
